fix team select icon overflow

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -3898,6 +3898,7 @@ md-dialog section.toolbar {
 
 .team-select-item {
   display: inline-block;
+  overflow: hidden;
   margin: 0 8px 8px 0;
   cursor: pointer;
 }
